--- a/WebTour/src/main/resources/static/css/tourPage.css
+++ b/WebTour/src/main/resources/static/css/tourPage.css
@@ -9,7 +9,7 @@
 
 .filter-container {
 	border-radius: 10px;
-	background: #54dfff;
+	background: #50e0eb;
 	padding: 20px;
 	max-width: 250px;
 	box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
