--- a/WebTour/src/main/resources/templates/User/change-password.html
+++ b/WebTour/src/main/resources/templates/User/change-password.html
@@ -6,11 +6,13 @@
 body {
 	font-family: Arial, sans-serif;
 	margin: 0;
-	padding: 20px;
+	padding: 0;
 }
 
-.container {
+.container-profile {
 	display: flex;
+	margin-top:20px;
+	margin-left:5%;
 	justify-content: space-between;
 }
 
@@ -27,7 +29,7 @@ body {
 }
 
 .left p {
-	margin: 5px 0;
+	margin: 35px 0;
 }
 
 .left p span {
@@ -40,7 +42,7 @@ body {
 }
 
 .right p {
-	margin: 5px 0;
+	margin: 30px 0;
 }
 
 .right p span {
@@ -97,7 +99,7 @@ a:hover{
 </head>
 <body>
 <header id="header"></header>
-	<div class="container">
+	<div class="container-profile">
 		<div class="left">
 			<h2>TRANG TÀI KHOẢN</h2>
 			<p>
