--- a/WebTour/src/main/resources/templates/User/contract.html
+++ b/WebTour/src/main/resources/templates/User/contract.html
@@ -1,215 +1,67 @@
 <html>
- <head>
-  <title>
-   Contact Information
-  </title>
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet"/>
-  <link rel="stylesheet" href="/css/contract.css">
- </head>
- <body>
-  <div class="container">
-    <div class="contract">
-    
-   <div class="header">
-    Thông tin liên hệ
-   </div>
-   <div class="subheader">
-    Chúng tôi vinh hạnh vì đã có cơ hội đồng hành với hơn 10.000 khách hàng trên khắp thế giới
-   </div>
-   <div class="info-boxes">
-    <div class="info-box">
-     <i class="fas fa-map-marker-alt">
-     </i>
-     <h3>
-      Địa chỉ
-     </h3>
-     <p>
-      Tòa nhà Ladeco, 266 Đội Cấn, Ba Đình, Hà Nội
-     </p>
-    </div>
-    <div class="info-box">
-     <i class="fas fa-envelope">
-     </i>
-     <h3>
-      Email
-     </h3>
-     <p>
-        <a href="mailto:support@sapo.vn" title="support@sapo.vn">support@sapo.vn</a>
-     </p>
-    </div>
-    <div class="info-box">
-     <i class="fas fa-phone">
-     </i>
-     <h3>
-      Hotline
-     </h3>
-     <p>
-      1900 6750
-     </p>
-    </div>
-   </div>
-</div>
-   <div class="form-container">
-    <div class="map">
-     <!-- <img alt="Map showing the location of the office" height="400" src="https://storage.googleapis.com/a1aa/image/gQZhM8XuAhLGMFcrWaOYUTxmg3orlgSSaHgrBeGVe8pQVTkTA.jpg" width="600"/> -->
-    </div>
-    <div class="form">
-     <input placeholder="Nam Đỗ" type="text" value="Nam Đỗ"/>
-     <input placeholder="Email" type="email" value="dodinhnam160703@gmail.com"/>
-     <input placeholder="Điện thoại*" type="text"/>
-     <textarea placeholder="Nội dung"></textarea>
-     <button>
-      Gửi thông tin
-     </button>
-    </div>
-   </div>
-  </div>
-  <div>
+<head>
+<title>Contact Information</title>
+<link
+	href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+	rel="stylesheet" />
+<link rel="stylesheet" href="/css/contract.css">
+</head>
+<body>
+	<header id="header"></header>
+	<div class="container-contract">
+		<div class="contract">
 
-  </div>
-  <div class="module-container">
+			<div class="header-contract">Thông tin liên hệ</div>
+			<div class="subheader">Chúng tôi vinh hạnh vì đã có cơ hội đồng
+				hành với hơn 10.000 khách hàng trên khắp thế giới</div>
+			<div class="info-boxes">
+				<div class="info-box">
+					<i class="fas fa-map-marker-alt"> </i>
+					<h3>Địa chỉ</h3>
+					<p>Tòa nhà Ladeco, 266 Đội Cấn, Ba Đình, Hà Nội</p>
+				</div>
+				<div class="info-box">
+					<i class="fas fa-envelope"> </i>
+					<h3>Email</h3>
+					<p>
+						<a href="mailto:support@sapo.vn" title="support@sapo.vn">support@sapo.vn</a>
+					</p>
+				</div>
+				<div class="info-box">
+					<i class="fas fa-phone"> </i>
+					<h3>Hotline</h3>
+					<p>1900 6750</p>
+				</div>
+			</div>
+		</div>
+		<div class="form-container">
+			<div class="map">
+				<!-- <img alt="Map showing the location of the office" height="400" src="https://storage.googleapis.com/a1aa/image/gQZhM8XuAhLGMFcrWaOYUTxmg3orlgSSaHgrBeGVe8pQVTkTA.jpg" width="600"/> -->
+			</div>
+			<div class="form">
+				<input placeholder="Nam Đỗ" type="text" value="Nam Đỗ" /> <input
+					placeholder="Email" type="email" value="dodinhnam160703@gmail.com" />
+				<input placeholder="Điện thoại*" type="text" />
+				<textarea placeholder="Nội dung"></textarea>
+				<button>Gửi thông tin</button>
+			</div>
+		</div>
+	</div>
+	<div></div>
+	<div class="module-container">
 
 
-  <div class="subscribe-section">
-   <h2>
-    Theo dõi và cập nhật tin tức mới nhất
-   </h2>
-   <p>
-    Vinh hạnh của chúng tôi là mang đến cho bạn những chuyến đi đáng nhớ. Mang đến cho bạn những chuyến đi đầy cảm hứng. Khám phá những vùng đất mới. Tự do khám phá cùng chúng tôi.
-   </p>
-   <input placeholder="Nhập Email của bạn" type="email"/>
-   <button>
-    Theo dõi
-   </button>
-  </div>
-</div>
-</div>
-  <div class="footer">
-   <div class="column">
-    <h3>
-     THÔNG TIN LIÊN HỆ
-    </h3>
-    <p>
-     <strong>
-      Địa chỉ
-     </strong>
-     <br/>
-     Tòa nhà Ladeco, 266 Đội Cấn, Ba Đình, Hà Nội
-    </p>
-    <p>
-     <strong>
-      Email
-     </strong>
-     <br/>
-     support@sapo.vn
-    </p>
-    <p>
-     <strong>
-      Hotline
-     </strong>
-     <br/>
-     1900 6750
-    </p>
-    <p>
-     <strong>
-      Thời gian hỗ trợ
-     </strong>
-     <br/>
-     08:30 - 21:30 các ngày trong tuần
-    </p>
-   </div>
-   <div class="column">
-    <h3>
-     HƯỚNG DẪN
-    </h3>
-    <a href="#">
-     Trang chủ
-    </a>
-    <a href="#">
-     Giới thiệu
-    </a>
-    <a href="#">
-     Tour du lịch
-    </a>
-    <a href="#">
-     Tin tức
-    </a>
-    <a href="#">
-     Faqs
-    </a>
-    <a href="#">
-     Liên hệ
-    </a>
-   </div>
-   <div class="column">
-    <h3>
-     THÔNG TIN CẦN BIẾT
-    </h3>
-    <a href="#">
-     Về chúng tôi
-    </a>
-    <a href="#">
-     Câu hỏi thường gặp
-    </a>
-    <a href="#">
-     Điều kiện, điều khoản
-    </a>
-    <a href="#">
-     Quy chế hoạt động
-    </a>
-    <a href="#">
-     Liên hệ
-    </a>
-   </div>
-   <div class="column">
-    <h3>
-     KẾT NỐI
-    </h3>
-    <div class="social-icons">
-     <a href="#">
-      <i class="fab fa-facebook-f">
-      </i>
-     </a>
-     <a href="#">
-      <i class="fab fa-youtube">
-      </i>
-     </a>
-     <a href="#">
-      <i class="fab fa-twitter">
-      </i>
-     </a>
-     <a href="#">
-      <i class="fab fa-instagram">
-      </i>
-     </a>
-     <a href="#">
-      <i class="fab fa-google">
-      </i>
-     </a>
-    </div>
-    <h3>
-     TẢI ỨNG DỤNG ND TRAVEL
-    </h3>
-    <div class="app-links">
-     <a href="#">
-      <img alt="App Store" height="40" src="https://storage.googleapis.com/a1aa/image/GP10CZ2ZZFYjG9L6Q0cCiOO4SysG0gQeEsLifS3Ekq6HIUkTA.jpg" width="120"/>
-     </a>
-     <a href="#">
-      <img alt="Google Play" height="40" src="https://storage.googleapis.com/a1aa/image/0aTyPKL8LM5NI9j3ze85b6bv9UpGCoKiICiQSObZekPOIUkTA.jpg" width="120"/>
-     </a>
-    </div>
-    <h3>
-     PHƯƠNG THỨC THANH TOÁN
-    </h3>
-    <div class="payment-methods">
-     <img alt="VNPayQR" height="30" src="https://storage.googleapis.com/a1aa/image/ef9UQZhd2fFN9pSe3JNhsn3zD8xnP47wJgYQyhpb9oKrgQROB.jpg" width="50"/>
-     <img alt="JCB" height="30" src="https://storage.googleapis.com/a1aa/image/GaozgSttlHo3Jp77ZZzU5wwmA7muK6Eye3qQ9KwxTetLIUkTA.jpg" width="50"/>
-     <img alt="SCB" height="30" src="https://storage.googleapis.com/a1aa/image/FQKIO8rjDs7wD900yg2kffwND0JAheqVDZnpF3CcxPqZQoInA.jpg" width="50"/>
-     <img alt="Visa" height="30" src="https://storage.googleapis.com/a1aa/image/hV3YOHZjXqJ0Cl1KETgaaHfhf8k0TRdSUVmQdiNzHZjPIUkTA.jpg" width="50"/>
-     <img alt="MasterCard" height="30" src="https://storage.googleapis.com/a1aa/image/2l5Sj2EEfM2MYaAfeswuSOTkE9Tet9HU3oeH6N9Tgx3FBhicC.jpg" width="50"/>
-    </div>
-   </div>
-   
-  </div>
- </body>
+		<div class="subscribe-section">
+			<h2>Theo dõi và cập nhật tin tức mới nhất</h2>
+			<p>Vinh hạnh của chúng tôi là mang đến cho bạn những chuyến đi
+				đáng nhớ. Mang đến cho bạn những chuyến đi đầy cảm hứng. Khám phá
+				những vùng đất mới. Tự do khám phá cùng chúng tôi.</p>
+			<input placeholder="Nhập Email của bạn" type="email" />
+			<button>Theo dõi</button>
+		</div>
+	</div>
+	<div id="footer"></div>
+	<script src="/js/header.js"></script>
+
+</body>
 </html>
