--- a/WebTour/src/main/resources/templates/components/sidebarAdmin.html
+++ b/WebTour/src/main/resources/templates/components/sidebarAdmin.html
@@ -74,8 +74,6 @@
 	<li><a th:href="@{/admin}"> <i class="fas fa-home"> </i>
 			Dashboard
 	</a></li>
-	<li><a href="#"> <i class="fas fa-envelope"> </i> Email
-	</a></li>
 	<li><a th:href="@{/admin/customer-management}"> <i
 			class="fas fa-edit"> </i> Customer
 	</a></li>
@@ -90,7 +88,7 @@
 			class="fas fa-user"> </i> Employee
 	</a></li>
 	
-	<li><a href="/"> <i class="fa-solid fa-right-from-bracket"></i>
+	<li><a href="/" onclick="Logout()"> <i class="fa-solid fa-right-from-bracket"></i>
 			Logout
 	</a></li>
 
