--- a/WebTour/src/main/resources/static/css/home_admin.css
+++ b/WebTour/src/main/resources/static/css/home_admin.css
@@ -7,6 +7,96 @@ body {
 	background-color: #f8f9fa;
 }
 
+.pagination {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	list-style-type: none;
+	padding: 0;
+	margin-bottom: 20px;
+}
+
+.pagination li {
+	margin: 0 5px;
+}
+
+.pagination a, .pagination button {
+	text-decoration: none;
+	color: #1e88e5;
+	padding: 10px 15px;
+	border: 1px solid #ddd;
+	border-radius: 4px;
+	background-color: #fff;
+}
+
+#input-quantity-custome {
+	width: 150px;
+	background: #e3e3e3;
+    padding-left: 5px;
+    border-radius: 4px;
+}
+
+.top-level-title-1 {
+	color: #FFD700;
+	font-size: 30px;
+    margin-right: 20px;
+}
+
+.top-level-title-2 {
+	color: #C0C0C0;
+	font-size: 30px;
+    margin-right: 20px;
+}
+
+.top-level-title-3 {
+	color: #CD7F32;
+	font-size: 30px;
+    margin-right: 20px;
+}
+.top-level-title-4 {
+	font-size: 30px;
+    margin-right: 20px;
+}
+
+.pagination a:hover, .pagination button:hover {
+	background-color: #eee;
+}
+
+.pagination .current {
+	background-color: #1e88e5;
+	color: white;
+}
+
+.pagination .icon {
+	font-size: 18px;
+}
+
+.empty-list-Data {
+	display: flex;
+	justify-content: center;
+	margin-bottom: 20px;
+	font-size: 22px;
+	font-weight: 800;
+	color: #bfbfbf;
+}
+
+.filter-box {
+	display: flex;
+	justify-content: center;
+}
+
+.icon-arrow {
+	margin-left: 20px;
+	margin-right: 20px;
+}
+
+.input-fiter {
+	border-radius: 6px;
+	border: 1px solid #e2e3e5;
+	height: 40px;
+	background: white;
+}
+
 .main-content {
 	margin-left: 250px;
 	padding: 20px;
