--- a/WebTour/src/main/resources/static/css/profile.css
+++ b/WebTour/src/main/resources/static/css/profile.css
@@ -3,16 +3,19 @@
 body {
 	font-family: Arial, sans-serif;
 	margin: 0;
-	padding: 20px;
+	padding: 0;
 }
 
-.container {
+.container-profile {
 	display: flex;
+	margin-top:20px;
+	margin-left:5%;
 	justify-content: space-between;
 }
 
 .left {
 	width: 30%;
+	
 }
 
 .right {
@@ -24,7 +27,7 @@ body {
 }
 
 .left p {
-	margin: 10px 0;
+	margin: 36px 0;
 }
 
 .left p span {
@@ -37,7 +40,7 @@ body {
 }
 
 .right p {
-	margin: 5px 0;
+	margin: 30px 0;
 }
 
 a:hover {
