--- a/WebTour/src/main/resources/templates/components/headerAdmin.html
+++ b/WebTour/src/main/resources/templates/components/headerAdmin.html
@@ -1,10 +1,9 @@
 
 <div class="search-bar">
-	<input placeholder="Search..." type="text" /> <i class="fas fa-search">
-	</i>
+
 </div>
 <div class="user-info">
 	<img alt="User Avatar" height="40"
 		src="..//imagess//background_dark_v1.jpg"
-		width="40" /> <span> John Doe </span>
+		width="40" /> <span id="user-name-admin"> John Doe </span>
 </div>
