update creat tour

--- a/WebTour/src/main/resources/templates/Admin/tours_management.html
+++ b/WebTour/src/main/resources/templates/Admin/tours_management.html
@@ -269,6 +269,10 @@
                 <label>Giá</label>
                 <input type="number" id="price-update" required>
             </div>
+             <div class="form-group">
+                <label>Số lượng</label>
+                <input type="number" id="quantity-update" required>
+            </div>
         </div>
 
         <label>Mô tả</label>
